# extract4chem_fluorine

./: .gitignore  REMAED_CHEM2.md  REMEAD.md  pyproject.toml  run-char.sh  run-doc.sh  run-final-merge.sh  run-main.sh  run-proc.sh  run-prop.sh  run.sh
configs/: characterization.toml  llm.toml  process.toml  property.toml
data/demo/: raw_20260319165541.jsonl  氟基_data_sample.jsonc
data/demo/示例/: 1.json  2.json  聚酰亚胺_schema.yaml
data/raw/: data_sample.jsonc  full.md
draft/: copy.ipynb  get_raw.ipynb  main.ipynb  markdown增强.ipynb  pair_content_list_by_similarity.py  分别抽取.ipynb  合并.ipynb
prompts/: application.txt  characterization.txt  synthesis.txt  主信号抽取.txt  抽取.txt
prompts/extract4chem_fluorine/: characterization.txt
prompts/extract_chem_2/: characterization.txt  main_signal.txt  process.txt  property.txt
src/extract4chem_fluorine/: llm_config.py  tool.py
src/extract4chem_fluorine/core/: pipeline.py  pipeline_app_char.py  pipeline_syn.py
src/extract4chem_fluorine/entities/: application.py  characterization.py  material_ID.py  synthesis.py  抽取.py
src/extract4chem_fluorine/tools/: __init__.py  data_tool.py  global_state_manager.py  json_parser.py
src/extract_chem_2/: __init__.py
src/extract_chem_2/characterization_after/: __main__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/characterization_before/: __init__.py  __main__.py  builder.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/characterization_predict/: __init__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/doc_split/: __init__.py  __main__.py  models.py  params.py  service.py  splitter.py  storage.py
src/extract_chem_2/entities/: __init__.py  characterization.py  main_signal.py  process.py  property.py
src/extract_chem_2/final_merge/: helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/main_signal_after/: __main__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/main_signal_before/: __init__.py  __main__.py  builder.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/main_signal_predict/: __main__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/process_after/: __init__.py  __main__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/process_before/: __init__.py  __main__.py  builder.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/process_predict/: __init__.py  __main__.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/property_after/: __init__.py  helpers.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/property_before/: __init__.py  __main__.py  builder.py  models.py  params.py  service.py  storage.py
src/extract_chem_2/property_predict/: __init__.py  models.py  params.py  service.py  storage.py
src/llm/: llm_factory.py  prompt_factory.py  robust_json_parser.py  structured_chain.py
客户反馈/: check.md  问题.txt
客户反馈/聚酰亚胺/: 3D Printing of Thermal Insulating PolyimideCellulose Nanocry.json  3D_Printing_of_Thermal_Insulating_PolyimideCellulose_Nanocry_2032281683612012544.md  json模板-20260306-最新.json  大模型数据标注说明书-历史版本_2032281595443548160.md
客户反馈/聚酰亚胺/客户认可的样例/原始文件/: 样例2.md
客户反馈/聚酰亚胺/客户认可的样例/样例2/: 抽取结果.json
客户反馈/聚酰亚胺/对比/: char5.jsonl  main.jsonl  proc.jsonl  prop.jsonl
客户反馈/聚酰亚胺/对比/标签/: 1.json  2.json
客户反馈/聚酰亚胺/对比/预测/: 1.json  2.json
客户反馈/错误示例/: 1.json
