[project]
authors = [{name = "王逸伟1", email = "1206182848@qq.com"}]
dependencies = ["torch>=2.9.0,<3", "torchvision>=0.24.0,<0.25", "json-repair>=0.53.0,<0.54"]
name = "extract4chem_fluorine"
requires-python = ">= 3.11, <3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
extract4chem_fluorine = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
langchain = ">=1.0,<2.0"
polars = ">=1.34.0,<2"
bidict = ">=0.23.1,<0.24"
langchain-openai = ">=1.0.1,<2"
orjsonl = ">=1.0.0,<2"
loguru = ">=0.7.3,<0.8"
jsonlines = ">=4.0.0,<5"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
notebook = { features = ["notebook"], solve-group = "default" }



[dependency-groups]
test = ["pytest"]
notebook = ["ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["src/extract4chem_fluorine"]
