[project]
authors = [{name = "王逸伟1", email = "1206182848@qq.com"}]
dependencies = ["torch>=2.9.0,<3", "torchvision>=0.24.0,<0.25", "json-repair>=0.53.0,<0.54"]
name = "extract4chem_fluorine"
requires-python = ">= 3.11, <3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
extract4chem_fluorine = { path = ".", editable = true }

[tool.pixi.tasks]
doc-split = "python -m src.extract_chem_2.doc_split"
main-signal-before = "python -m src.extract_chem_2.main_signal_before"
main-signal-predict = "python -m src.extract_chem_2.main_signal_predict --model-name doubao-seed-2-0-lite-high"
main-signal-after = "python -m src.extract_chem_2.main_signal_after"
char-before = "python -m src.extract_chem_2.characterization_before"
char-predict = "python -m src.extract_chem_2.characterization_predict -m doubao-seed-2-0-lite-high"
char-after = "python -m src.extract_chem_2.characterization_after"
prop-before = "python -m src.extract_chem_2.property_before"
prop-predict = "python -m src.extract_chem_2.property_predict -m doubao-seed-2-0-lite-high"
prop-after = "python -m src.extract_chem_2.property_after"
proc-before = "python -m src.extract_chem_2.process_before"
proc-predict = "python -m src.extract_chem_2.process_predict -m doubao-seed-2-0-lite-high"
proc-after = "python -m src.extract_chem_2.process_after"
final-merge = "python -m src.extract_chem_2.final_merge"

doc-split-cur = "pixi run doc-split src.extract_chem_2.doc_split --inpath data/out/聚酰亚胺/raw_20260316.jsonl"
main-signal-before-cur = "pixi run main-signal-before --inpath data/out/聚酰亚胺/20260316195500/doc_split/raw_20260316.jsonl"
main-signal-predict-cur = "pixi run main-signal-predict --inpath data/out/聚酰亚胺/20260316195500/main_signal_before/raw_20260316.jsonl"
main-signal-after-cur = "pixi run main-signal-after --before-jsonl data/out/聚酰亚胺/20260316195500/main_signal_before/raw_20260316.jsonl"


[tool.pixi.dependencies]
langchain = ">=1.0,<2.0"
polars = ">=1.34.0,<2"
bidict = ">=0.23.1,<0.24"
langchain-openai = ">=1.0.1,<2"
orjsonl = ">=1.0.0,<2"
loguru = ">=0.7.3,<0.8"
jsonlines = ">=4.0.0,<5"
ipywidgets = ">=8.1.8,<9"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
notebook = { features = ["notebook"], solve-group = "default" }



[dependency-groups]
test = ["pytest"]
notebook = ["ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["src/extract4chem_fluorine"]
